# sample-python-project

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  ruff.yml  test.yml
src/: hello.py
src/mypkg/: __init__.py  fib.py  test_fib.py
tests/: test_fib.py  test_hello.py
