[project]
name = "sample-python-project"
version = "0.1.0"
description = "A sample Python project."
readme = "README.md"
requires-python = ">=3.13"
license.file = "LICENSE"
authors = [{ name = "Yikang Zhu", email = "zhuyk6@foxmail.com" }]

dependencies = []

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pdoc>=15.0.1", "pytest>=8.3.4"]

[[tool.uv.index]]
name = "ustc"
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[tool.uv.pip]
index-url = "https://mirrors.ustc.edu.cn/pypi/simple"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]
testpaths = ["src", "tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
