[project]
name = "sample-python-project"
version = "0.1.0"
description = "A sample Python project."
readme = "README.md"
requires-python = ">=3.13"
license.file = "LICENSE"
authors = [{ name = "Yikang Zhu", email = "zhuyk6@foxmail.com" }]

dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

[[tool.uv.index]]
name = "ustc"
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[tool.uv.pip]
index-url = "https://mirrors.ustc.edu.cn/pypi/simple"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = "cov.xml"

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
